5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1573_1329.log
== TEST (2019-03-25 14:59:51) 
-- CODE:
amigos=4.00
conta=180.00

print(contas/amigos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(contas/amigos)
NameError: name 'contas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:08) 
-- CODE:
amigos=4.00
conta=180.00

print(180.00/4.00)

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:03:53) 
-- CODE:
amigos=4.00
conta=180.00

print(Renda = 180.00/4.00)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Renda = 180.00/4.00)
TypeError: 'Renda' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:05:52) 
-- CODE:
amigos=4.00
conta=180.00
valor da conta =180.00/4.00
print(valor da conta)

-- ERROR:
File "XXXX", line 3
    valor da conta =180.00/4.00
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:05:59) 
-- CODE:
amigos=4.00
conta=180.00
valor da conta = 180.00/4.00
print(valor da conta)

-- ERROR:
File "XXXX", line 3
    valor da conta = 180.00/4.00
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:06:08) 
-- CODE:
amigos=4.00
conta=180.00
valordaconta = 180.00/4.00
print(valor da conta)

-- ERROR:
File "XXXX", line 4
    print(valor da conta)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:06:34) 
-- CODE:
amigos=4.00
conta=180.00

print(180.00/4.00)

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:06:45) 
-- CODE:
amigos=4.00
conta=180.00

print(180.00/4.00)

-- EXECUTION TIME:
0.151514
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
